<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StreamingClient" >

    <FrameLayout
        android:id="@+id/streamingclient_surface_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black" >

        <net.majorkernelpanic.streaming.gl.SurfaceView
            android:id="@+id/streamingclient_surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/streamingclient_bitrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toRightOf="@+id/streamingclient_surface_layout"
        android:padding="5dp"
        android:text="@string/streamingclient_default_bitrate"
        android:textColor="@android:color/white" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <LinearLayout
            android:id="@+id/streamingclient_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/streamingclient_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start"
                android:src="@drawable/ic_switch_video"
                android:text="@string/start" />

            <ImageButton
                android:id="@+id/streamingclient_flash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/streamingclient_flash"
                android:src="@drawable/ic_flash_on_holo_light" />

            <ImageButton
                android:id="@+id/streamingclient_camera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/streamingclient_camera"
                android:src="@drawable/ic_switch_photo_facing_holo_light" />

            <ImageButton
                android:id="@+id/streamingclient_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/streamingclient_video"
                android:src="@drawable/ic_settings_holo_light" />
        </LinearLayout>
    </FrameLayout>

    <include layout="@layout/video_settings" />

    <include layout="@layout/server_settings" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/streamingclient_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/progress_large_white" />
    </FrameLayout>

</RelativeLayout>